# RemoteControl

./: .gitignore  README.md
GUI/: App.cpp  RemoteControlDraft.cpp  RemoteControlDraft.h
WebcamStreamer/: client.cpp  sever.cpp  webcamstreamer.cpp  webcamstreamer.h
client/: CMakeLists.txt
client/src/: App.cpp  Base64.cpp  Base64.h  Client.cpp  Client.h  Gmail.cpp  Gmail.h  HTTPListener.cpp  HTTPListener.h  Panels.cpp  Panels.h  RemoteControlDraft.cpp  RemoteControlDraft.h  RemoteControlFrame.cpp  RemoteControlFrame.h  base64.cpp  base64.h  client.cpp  client.h  client_socket.cpp  client_socket.h  gmail.cpp  gmail.h  http_listener.cpp  http_listener.h  main.cpp  panel_login.cpp  panel_login.h  panels.cpp  panels.h
server/: CMakeLists.txt
server/src/: Server.cpp  ServerHandler.cpp  ServerHandler.h  server.cpp  server.h  server_handler.cpp  server_handler.h  server_socket.cpp  server_socket.h  server_task.cpp  server_task.h
